# a

./: README.md  pyproject.toml
docs/: audio-setup.md  oauth.md  obs-guide.md  plugin-api.md  quickstart.md  shader-guide.md
examples/plugins/: example_plugin.py  plugins.json
packaging/specs/: nebulavis.spec
src/nebulavis/: __init__.py  main.py
src/nebulavis/audio/: __init__.py  analysis.py  capture.py  latency.py  pipeline.py
src/nebulavis/integrations/: __init__.py  apple_music.py  spotify.py
src/nebulavis/plugins/: __init__.py  manager.py
src/nebulavis/recording/: __init__.py  recorder.py
src/nebulavis/resources/: __init__.py
src/nebulavis/resources/presets/: ambient_nebula.json  bass_tunnel.json  chroma_sunburst.json  fluid_sprites.json  glitch_city.json  kaleidoscope.json  minimal_bars.json  particle_supernova.json  raymarched_dunes.json  wireframe_terrain.json
src/nebulavis/resources/shaders/: ambient_nebula.glsl  bass_tunnel.glsl  chroma_sunburst.glsl  fluid_sprites.glsl  glitch_city.glsl  kaleidoscope.glsl  minimal_bars.glsl  particle_supernova.glsl  ray_dunes.glsl  wireframe_terrain.glsl
src/nebulavis/ui/: __init__.py  dashboard.py
src/nebulavis/utils/: __init__.py  logging.py
src/nebulavis/visual/: __init__.py  engine.py  graph.py  outputs.py  presets.py
src/nebulavis/visual/effects/: shader_manager.py
tests/: test_audio_analysis.py  test_latency.py  test_presets.py
