[project]
name = "nebulavis"
version = "0.1.0"
description = "NebulaVis - cross-platform, GPU-accelerated music visualizer"
readme = "README.md"
authors = [
    { name = "Codex", email = "codex@openai.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "librosa>=0.10",
    "numba>=0.58",
    "moderngl>=5.8",
    "glfw>=2.6",
    "dearpygui>=1.11",
    "Pillow>=10.0",
    "requests>=2.31",
    "aiohttp>=3.9",
    "websockets>=12.0",
    "watchdog>=3.0",
    "psutil>=5.9",
    "ffmpeg-python>=0.2",
    "typer>=0.9",
    "pydantic>=2.5",
    "cachetools>=5.3",
    "qasync>=0.27",
    "python-dateutil>=2.8",
    "colour-science>=0.4",
    "opencv-python-headless>=4.9"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23"
]

[project.scripts]
nebulavis = "nebulavis.main:app_entry"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
